<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.demo.ntpclock.HomeActivity" >

    <TextView
        android:id="@+id/txtServerTimeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_time_title"
        android:textColor="@color/orange"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold" />

    <FrameLayout
        android:id="@+id/clockContainer"
        android:layout_width="match_parent"
        android:layout_height="150dip"
        android:layout_below="@+id/txtServerTimeTitle" >

        <com.demo.ntpclock.widget.AnalogClock
            android:id="@+id/analogClock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="visible"/>

        <com.demo.ntpclock.widget.DigitalClock
            android:id="@+id/digitalClock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/frame_border"
            android:padding="10dip"
            android:textColor="@color/blue_light"
            android:textSize="40dip"
            android:textStyle="bold"
            android:visibility="gone" />
    </FrameLayout>

    <TextView
        android:id="@+id/txtAnalogClockTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/clockContainer"
        android:layout_marginTop="5dip"
        android:text="@string/analog_clock_title"
        android:textColor="@color/black" />

    <ImageButton
        android:id="@+id/btnAnalogClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/clockContainer"
        android:layout_toRightOf="@+id/txtAnalogClockTitle"
        android:layout_marginLeft="3dip"
        android:background="@null"
        android:src="@drawable/btn_checkbox_selector"
        android:onClick="onBtnAnalogClockClick" />

    <TextView
        android:id="@+id/txtDigitalClockTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/clockContainer"
        android:layout_marginTop="5dip"
        android:layout_marginLeft="30dip"
        android:layout_toRightOf="@+id/btnAnalogClock"
        android:text="@string/digital_clock_title"
        android:textColor="@color/black" />

    <ImageButton
        android:id="@+id/btnDigitalClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/clockContainer"
        android:layout_toRightOf="@+id/txtDigitalClockTitle"
        android:layout_marginLeft="3dip"
        android:background="@null"
        android:src="@drawable/btn_checkbox_selector"
        android:onClick="onBtnDigitalClockClick" />

    <TextView
        android:id="@+id/txtInfoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtAnalogClockTitle"
        android:layout_marginTop="20dip"
        android:text="@string/information_title"
        android:textColor="@color/orange"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold" />

    <org.sufficientlysecure.htmltextview.HtmlTextView
        android:id="@+id/txtInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtInfoTitle"
        android:background="@drawable/frame_border"
        android:paddingLeft="5dip"
        android:paddingRight="3dip"
        android:paddingTop="5dip" />

    <TextView
        android:id="@+id/txtSyncCountDownTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dip"
        android:text="@string/sync_countdown_title"
        android:textColor="@color/orange"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtSyncCountDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dip"
        android:layout_marginLeft="10dip"
        android:layout_toRightOf="@+id/txtSyncCountDownTitle"
        android:textColor="@color/blue_light"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold" />

</RelativeLayout>